Release 2.3.0
Being the last release of the year, I hope everyone stay safe.
In the next few weeks I'm gonna update and stay working inside the wiki of the module.
Until then, you can see the Readme, the issues already closed, or ask a question yourself inside Issues.
Keep programming :D

Custom Shell Commands

You can use it with the endpoint in the api, and adding those commands inside the customCommand object in the config of Remote Control.  This still  an insecure way of implement this feature, so in the next update the remote endpoint will be deprecated. Try to use the API endpoints instead. Cheers! #159

Secure the remote endpoint

Deprecation soon

Custom Menus: User Input Field (#181) and Sliders

Soon I'll make the Wiki adding this changes and how you can use them. You also can add a text input to execute commands, so it's also useful for #159

Closes #181

Monitor System changed

Fixes #234

Monitor System fix

Closes #234 with a lot of help ;D

Payload Integer

Need more tests into this, but seems to work as expected.

Fixes #155

Revert "Payload Integer"

This reverts commit a648bc573eb53ea9f623a11aa10cc182f4c2c160.

Better Template 2

Those templates are working as expected. I'll add the warning about invalid issues, and remove blank issues.

Future issues that doesn't have the appropiate template will be discarted. Sorry to those good ideas, but you'll have to think better what you're reporting.
